tests/snapshots/examples_fixtures/functions__test_reassignment_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/functions/test_reassignment_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E002]: Immutable Binding

Cannot reassign to immutable variable `a`.

  examples/functions/test_reassignment_error.flx:4:1
  |
4 | a = 10;
  | ^^^^^^^

Hint:
  In Flux, bindings are immutable. Compute a new value with a new binding name (for example: `let next_a = ...`).
== stdout ==
<not executed>
